management-namespace/monitoring/prometheus/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: mgt
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector:
    app: prometheus-server
#  type: NodePort
  ports:
    - port: 8080
      targetPort: 9090
#     nodePort: 30003
